--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -104,6 +104,20 @@ services:
     ports:
       - 5433:5432
 
+  s3server:
+    image: scality/s3server:latest
+    container_name: s3server
+    restart: unless-stopped
+    ports:
+      - "8000:8000"
+    volumes:
+      - s3data:/usr/src/app/localData
+      - s3metadata:/usr/src/app/localMetadata
+    environment:
+      - SCALITY_ACCESS_KEY_ID=newAccessKey
+      - SCALITY_SECRET_ACCESS_KEY=newSecretKey
+      - SSL="FALSE"
+
   redis:
     image: redis:latest
     expose:
@@ -295,3 +309,5 @@ services:
 volumes:
   postgres-db-volume:
   postgresdbsql:
+  s3data:
+  s3metadata:
